A commit just before adding the map in the westeradict platform

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -118,7 +118,7 @@ main{
 width: 100%;
 }
 .pageMainContent{
-    width: 100%;
+    width: 95%;
     max-width: 1000px;
 }
 #profileContentContainer{
@@ -178,7 +178,7 @@ width: 100%;
     }
 }
 @media(max-width: 1200px) {
-    a{
+    #dropDownMenu a{
         width: 0px;
     }
     #dropDownMenu{
