--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,7 @@ form .icon{
 
 /* Styles for the popup */
 .popupContainer{
+    z-index: 100;
     position: fixed;
     width: 100vw;
     height: 100vh;
