--- a/public/css/main.css
+++ b/public/css/main.css
@@ -83,12 +83,13 @@ header img{
  padding: 0;
 }
 #dropDownMenu{
+    display: none;
     z-index: 8;
     position: absolute;
     border-left: 1px solid lightgray;
     top: 0px;
     bottom: 0;
-    right: 0px;
+    right: -200px;
     width: 200px;
     padding-top: 80px;
     background-color: white;
@@ -194,15 +195,6 @@ width: 100vw;
 .theme #lightMode:hover{
     background-color: rgba(255, 255, 255, 0.2);
 }
-.bodyDarkSetting{
-    background-color: #111111;
-    color: white;
-}
-.headerLightSetting{
-    background-color: rgb(255, 255, 255);
-    color: black;
-}
-
 /* The theme tooltips style */
 .theme div{
     width: 200px;
@@ -250,10 +242,10 @@ width: 100vw;
 }
 @media(max-width: 1200px) {
     #dropDownMenu a{
-        width: 0px;
+        width: -200px;
     }
     #dropDownMenu{
-        width: 0;
+        width: -200px;
     }
 }
 @media(max-width: 500px){
