--- a/public/css/style.css
+++ b/public/css/style.css
@@ -283,6 +283,85 @@ footer{
         padding: 5px;
     }
 }
+/* RESPONSIVE STYLES OF THE AUTHENTICATION PAGES (LOGIN AND SIGNUP PAGES) */
+
+/* size of the authentication image when the screen size is 800px and above */
+.authPageImgSize{
+    width: 55%;
+    height: 100vh;
+}
+/* size of the authentication image when the screen size is 800px and below */
+.newauthPageImgSize{
+    width: 100%;
+    height: 95vh;
+}
+.authPageImg img{
+    width: 100%;
+    height: auto;
+}
+.authContainerWrapper{
+    background-color: white;
+    align-items: center;
+    width: 45%;
+    justify-content: center;
+    height: 100vh;
+}
+.newAuthContainerWrapper{
+    width: 100%;
+}
+
+.authFormContainer{
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px 3px 8px 1px rgba(0, 0, 0, 0.3);
+    height: 45%;
+    width: 80%;
+    max-width: 450px;
+    padding-top: 20px;
+    border-radius: 5px;
+    background-color: white;
+}
+.logoContainer{
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 0px;
+    width: 100%;
+    height: 100px;
+}
+.logoContainer img {
+    width: 70px;
+    height: auto;
+}
+#platformName {
+    font-weight: bolder;
+    font-size: 1.9rem;
+}
+.authFormContainer > p{
+    text-align: center;
+    font-weight: bold;
+    padding-bottom: 15px;
+}
+.authFormContainer form{
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+}
+.accountExistence{
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.accountExistence a{
+    color: var(--primary-color);
+    font-weight: bold;
+}
+.accountExistence a:hover{
+    text-decoration: underline;
+}
+/* END OF THE RESPONSIVE STYLES OF THE AUTHENTICATION PAGES (LOGIN AND SIGNUP PAGES) */
+
 /* Auth buttons at bottom of home section */
 #auth-buttons-bottom {
     display: flex;
